--- a/index.html
+++ b/index.html
@@ -14,11 +14,59 @@
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body class="container">
+    <!-- Mobile navigation menu -->
+    <div class="js-menu-container">
+      <button class="close-btn-modile-menu js-close-menu">
+        <svg class="mobile-close-btn">
+          <use href="./images/icons.svg#icon-close-button-mobile"></use>
+        </svg>
+      </button>
+
+      <nav class="mobile-nav">
+        <ul class="mobile-navigation">
+          <li>
+            <a href="./index.html" class="mobile-nav-links">Studio</a>
+          </li>
+          <li>
+            <a href="./portfolio.html" class="mobile-nav-links">Portfolio</a>
+          </li>
+          <li><a href="" class="mobile-nav-links">Contacts</a></li>
+        </ul>
+      </nav>
+
+      <div class="mobile-nav-contacts">
+        <a href="mailto:info@devstudio.com" class="mail-nav-contacts">
+          info@devstudio.com</a
+        >
+
+        <a href="tel:+12127724150" class="tel-nav-contacts"> +1 212-772-4150</a>
+      </div>
+
+      <div class="social-link-mobile">
+        <ul>
+          <li><a href="">Instagram</a></li>
+          <hr />
+          <li><a href="">Twitter</a></li>
+          <hr />
+          <li><a href="">Facebook</a></li>
+          <hr />
+          <li><a href="">LinkedIn</a></li>
+        </ul>
+      </div>
+    </div>
+
+    <!-- header -->
     <header>
+      <!-- navigation bar -->
       <div class="navigation-bar">
         <a href="./index.html" class="logo"
           ><span class="logo-web">Web</span>Studio</a
         >
+
+        <svg class="mobile-menu-icon js-open-menu">
+          <use href="./images/icons.svg#icon-mobile-menu"></use>
+        </svg>
+        <!-- navigation buttons -->
         <nav class="nav">
           <ul class="navigation">
             <li>
@@ -32,6 +80,7 @@
             <li><a href="" class="nav-links contacts-page">Contacts</a></li>
           </ul>
         </nav>
+        <!-- navigation contacts -->
         <div class="nav-contacts-pos">
           <div>
             <a href="mailto:info@devstudio.com" class="nav-contacts">
@@ -44,7 +93,6 @@
               >info@devstudio.com</a
             >
           </div>
-
           <div>
             <a href="tel:+12127724150" class="nav-contacts">
               <svg width="10px" height="16px" class="nav-icon">
@@ -58,15 +106,18 @@
           </div>
         </div>
       </div>
+      <!-- hero section -->
       <section class="hero-section">
         <h1 class="hero-heading">EFFECTIVE SOLUTIONS FOR YOUR BUSINESS</h1>
         <button type="button" data-modal-open>Request our service</button>
       </section>
     </header>
     <main>
+      <!-- What we do section -->
       <section>
+        <!-- What we do articles -->
         <div class="what-we-do-articles">
-          <div>
+          <div class="article-container">
             <div class="bg-art-logo">
               <svg width="70px" height="70px">
                 <use href="./images/icons.svg#icon-antenna"></use>
@@ -78,7 +129,7 @@
               develop a customized solution.
             </p>
           </div>
-          <div>
+          <div class="article-container">
             <div class="bg-art-logo">
               <svg width="70px" height="70px">
                 <use href="./images/icons.svg#icon-clock"></use>
@@ -90,7 +141,7 @@
               the company: respect your time and deadlines.
             </p>
           </div>
-          <div>
+          <div class="article-container">
             <div class="bg-art-logo">
               <svg width="70px" height="70px">
                 <use href="./images/icons.svg#icon-diagram"></use>
@@ -102,7 +153,7 @@
               solution development and implementation.
             </p>
           </div>
-          <div>
+          <div class="article-container">
             <div class="bg-art-logo">
               <svg width="70px" height="70px">
                 <use href="./images/icons.svg#icon-astronaut"></use>
@@ -115,55 +166,86 @@
             </p>
           </div>
         </div>
-
-        <div>
+        <!-- What we do cards-->
+        <div class="what-we-do-cards-container">
           <h2 class="section-heading what-we-do-heading">What we do</h2>
 
           <ul class="what-we-do-photos">
             <li class="what-we-do-card">
-              <img
-                src="./images/man-writing-on-keyboard.png"
-                alt="man writing on keyboard"
-                width="370"
-              />
-              <div class="overlay-text">
-                <h3>DESKTOP APPS</h3>
+              <div class="overlay-position">
+                <img
+                  src="./images/man-writing-on-keyboard.png"
+                  alt="man writing on keyboard"
+                  width="370"
+                />
+                <div class="overlay-text">
+                  <h3>DESKTOP APPS</h3>
+                </div>
               </div>
             </li>
             <li class="what-we-do-card">
-              <img
-                src="./images/man-woking-at-a-laptop-and-a-phone.png"
-                alt="man woking at a laptop and a phone"
-                width="370"
-              />
-              <div class="overlay-text">
-                <h3>Mobile APPS</h3>
+              <div class="overlay-position">
+                <img
+                  src="./images/man-woking-at-a-laptop-and-a-phone.png"
+                  alt="man woking at a laptop and a phone"
+                  width="370"
+                />
+                <div class="overlay-text">
+                  <h3>Mobile APPS</h3>
+                </div>
               </div>
             </li>
             <li class="what-we-do-card">
-              <img
-                src="./images/a-tablet-with-colors-grid.png"
-                alt="a tablet with colors grid"
-                width="370"
-              />
-              <div class="overlay-text">
-                <h3>DESIGN SOLUTIONS</h3>
+              <div class="overlay-position">
+                <img
+                  src="./images/a-tablet-with-colors-grid.png"
+                  alt="a tablet with colors grid"
+                  width="370"
+                />
+                <div class="overlay-text">
+                  <h3>DESIGN SOLUTIONS</h3>
+                </div>
               </div>
             </li>
           </ul>
         </div>
       </section>
-
+      <!-- Team section -->
       <section class="team-section">
         <h2 class="section-heading out-team-heading">Our Team</h2>
         <div class="team-cards">
           <ul>
+            <!-- Christopher Walker -->
             <li class="team-card">
-              <img
-                src="./images/chris-walker.jpg"
-                alt="Christopher Walker"
-                width="270"
-              />
+              <picture>
+                <!-- Dekstop -->
+                <source
+                  media="(min-width: 1158px)"
+                  srcset="
+                    ./images/chris-walker-d.jpg,
+                    ./images/chris-walker-d-2x.jpg
+                  "
+                />
+                <!-- Tablet -->
+                <source
+                  media="(min-width: 768px)"
+                  srcset="
+                    ./images/chris-walker-t.jpg,
+                    ./images/chris-walker-t-2x.jpg
+                  "
+                />
+                <!-- Mobile -->
+                <source
+                  srcset="
+                    ./images/chris-walker-m.jpg,
+                    ./images/chris-walker-m-2x.jpg
+                  "
+                />
+                <img
+                  src="./images/chris-walker-m.jpg"
+                  alt="Christopher Walker"
+                />
+              </picture>
               <h2 class="team-member-name">Christopher Walker</h2>
               <p class="team-member-function">Product Designer</p>
               <div class="team-social-links">
@@ -185,12 +267,34 @@
                 ></a>
               </div>
             </li>
+            <!-- Kylie Evans -->
             <li class="team-card">
-              <img
-                src="./images/kylie-evans.jpg"
-                alt="Kylie Evans"
-                width="270"
-              />
+              <picture>
+                <!-- Dekstop -->
+                <source
+                  media="(min-width: 1158px)"
+                  srcset="
+                    ./images/kylie-evans-d.jpg,
+                    ./images/kylie-evans-d-2x.jpg
+                  "
+                />
+                <!-- Tablet -->
+                <source
+                  media="(min-width: 768px)"
+                  srcset="
+                    ./images/kylie-evans-t.jpg,
+                    ./images/kylie-evans-t-2x.jpg
+                  "
+                />
+                <!-- Mobile -->
+                <source
+                  srcset="
+                    ./images/kylie-evans-m.jpg,
+                    ./images/kylie-evans-m-2x.jpg
+                  "
+                />
+                <img src="./images/kylie-evans-m.jpg" alt="Kylie Evans" />
+              </picture>
               <h2 class="team-member-name">Kylie Evans</h2>
               <p class="team-member-function">Frontend Developer</p>
               <div class="team-social-links">
@@ -212,12 +316,34 @@
                 ></a>
               </div>
             </li>
+            <!-- Ryan Harris -->
             <li class="team-card">
-              <img
-                src="./images/ryan-harris.jpg"
-                alt="Ryan Harris"
-                width="270"
-              />
+              <picture>
+                <!-- Dekstop -->
+                <source
+                  media="(min-width: 1158px)"
+                  srcset="
+                    ./images/ryan-harris-d.jpg,
+                    ./images/ryan-harris-d-2x.jpg
+                  "
+                />
+                <!-- Tablet -->
+                <source
+                  media="(min-width: 768px)"
+                  srcset="
+                    ./images/ryan-harris-t.jpg,
+                    ./images/ryan-harris-t-2x.jpg
+                  "
+                />
+                <!-- Mobile -->
+                <source
+                  srcset="
+                    ./images/ryan-harris-m.jpg,
+                    ./images/ryan-harris-m-2x.jpg
+                  "
+                />
+                <img src="./images/ryan-harris-m.jpg" alt="Ryan Harris" />
+              </picture>
               <h2 class="team-member-name">Ryan Harris</h2>
               <p class="team-member-function">Marketing</p>
               <div class="team-social-links">
@@ -239,12 +365,34 @@
                 ></a>
               </div>
             </li>
+            <!-- Tyler Moore -->
             <li class="team-card">
-              <img
-                src="./images/tyler-moore.jpg"
-                alt="Tyler Moore"
-                width="270"
-              />
+              <picture>
+                <!-- Dekstop -->
+                <source
+                  media="(min-width: 1158px)"
+                  srcset="
+                    ./images/tyler-moore-d.jpg,
+                    ./images/tyler-moore-d-2x.jpg
+                  "
+                />
+                <!-- Tablet -->
+                <source
+                  media="(min-width: 768px)"
+                  srcset="
+                    ./images/tyler-moore-t.jpg,
+                    ./images/tyler-moore-t-2x.jpg
+                  "
+                />
+                <!-- Mobile -->
+                <source
+                  srcset="
+                    ./images/tyler-moore-m.jpg,
+                    ./images/tyler-moore-m-2x.jpg
+                  "
+                />
+                <img src="./images/tyler-moore-m.jpg" alt="Tyler Moore" />
+              </picture>
               <h2 class="team-member-name">Tyler Moore</h2>
               <p class="team-member-function">UI Designer</p>
               <div class="team-social-links">
@@ -269,14 +417,14 @@
           </ul>
         </div>
       </section>
-
+      <!-- Customers section -->
       <section>
         <h2 class="regular-customers">Regular Customers</h2>
         <div class="customers-cards">
           <ul>
             <li>
               <a href=""
-                ><svg>
+                ><svg class="customers-logo">
                   <use href="./images/icons.svg#icon-ya-and-co-logo"></use></svg
               ></a>
             </li>
@@ -315,13 +463,13 @@
           </ul>
         </div>
       </section>
-
+      <!-- Footer -->
       <footer class="footer-section">
-        <div>
+        <div class="logo-and-adress">
           <a href="index.html" class="footer-logo"
             ><span class="logo-web">Web</span>Studio</a
           >
-
+          <!-- Footer adress -->
           <address class="footer-contacts-section">
             <p class="footer-adress">695 Park Ave, NY 10065, USA</p>
             <a
@@ -334,6 +482,7 @@
             >
           </address>
         </div>
+        <!-- Social icons -->
         <div class="social-links-footer">
           <h3>find us on</h3>
           <ul>
@@ -363,7 +512,7 @@
             </li>
           </ul>
         </div>
-
+        <!-- Footer email form -->
         <div class="form">
           <h3>Subscribe to the newsletter</h3>
           <form class="footer-form">
@@ -390,6 +539,7 @@
         <div class="modal-form-content">
           <h2>Leave your information and we'll call you back</h2>
           <form class="modal-form">
+            <!-- Name field -->
             <div class="name-form imput-field">
               <span>Name</span>
               <div>
@@ -401,6 +551,7 @@
                 </lable>
               </div>
             </div>
+            <!-- Telephone field -->
             <div class="tel-form imput-field">
               <span>Telephone</span>
               <div>
@@ -411,6 +562,7 @@
                 ></lable>
               </div>
             </div>
+            <!-- Email field -->
             <div class="email-form imput-field">
               <span>E-mail</span>
               <div>
@@ -422,6 +574,7 @@
                 </lable>
               </div>
             </div>
+            <!-- Comments field -->
             <div class="comments-form">
               <span>Comments</span>
               <div>
@@ -433,6 +586,7 @@
                 </lable>
               </div>
             </div>
+            <!-- Termn and conditions -->
             <div class="terms-and-conds">
               <label class="terms-and-conds-lbl">
                 <input type="checkbox" class="checkmark" name="agreement" />
@@ -451,6 +605,7 @@
       </div>
     </div>
 
+    <script src="./js/mobile-menu.js"></script>
     <script src="./js/modal.js"></script>
   </body>
 </html>
