--- a/portfolio.html
+++ b/portfolio.html
@@ -15,12 +15,60 @@
   </head>
 
   <body class="container">
+    <!-- Mobile navigation menu -->
+    <div class="js-menu-container">
+      <button class="close-btn-modile-menu js-close-menu">
+        <svg class="mobile-close-btn">
+          <use href="./images/icons.svg#icon-close-button-mobile"></use>
+        </svg>
+      </button>
+
+      <nav class="mobile-nav">
+        <ul class="mobile-navigation">
+          <li>
+            <a href="./index.html" class="mobile-nav-links">Studio</a>
+          </li>
+          <li>
+            <a href="./portfolio.html" class="mobile-nav-links">Portfolio</a>
+          </li>
+          <li><a href="" class="mobile-nav-links">Contacts</a></li>
+        </ul>
+      </nav>
+
+      <div class="mobile-nav-contacts">
+        <a href="mailto:info@devstudio.com" class="mail-nav-contacts">
+          info@devstudio.com</a
+        >
+
+        <a href="tel:+12127724150" class="tel-nav-contacts"> +1 212-772-4150</a>
+      </div>
+
+      <div class="social-link-mobile">
+        <ul>
+          <li><a href="">Instagram</a></li>
+          <hr />
+          <li><a href="">Twitter</a></li>
+          <hr />
+          <li><a href="">Facebook</a></li>
+          <hr />
+          <li><a href="">LinkedIn</a></li>
+        </ul>
+      </div>
+    </div>
+
+    <!-- header -->
     <header>
+      <!-- navigation bar -->
       <div class="navigation-bar">
         <a href="./index.html" class="logo"
           ><span class="logo-web">Web</span>Studio</a
         >
-        <nav>
+
+        <svg class="mobile-menu-icon js-open-menu">
+          <use href="./images/icons.svg#icon-mobile-menu"></use>
+        </svg>
+        <!-- navigation buttons -->
+        <nav class="nav">
           <ul class="navigation">
             <li>
               <a href="./index.html" class="nav-links index">Studio</a>
@@ -33,6 +81,7 @@
             <li><a href="" class="nav-links">Contacts</a></li>
           </ul>
         </nav>
+        <!-- navigation contacts -->
         <div class="nav-contacts-pos">
           <div>
             <a href="mailto:info@devstudio.com" class="nav-contacts">
@@ -45,7 +94,6 @@
               >info@devstudio.com</a
             >
           </div>
-
           <div>
             <a href="tel:+12127724150" class="nav-contacts">
               <svg width="10px" height="16px" class="nav-icon">
@@ -238,11 +286,11 @@
     </section>
 
     <footer class="footer-section">
-      <div>
+      <div class="logo-and-adress">
         <a href="index.html" class="footer-logo"
           ><span class="logo-web">Web</span>Studio</a
         >
-
+        <!-- Footer adress -->
         <address class="footer-contacts-section">
           <p class="footer-adress">695 Park Ave, NY 10065, USA</p>
           <a
@@ -253,6 +301,7 @@
           <a href="tel:+12127724150" class="footer-contacts">+1 212-772-4150</a>
         </address>
       </div>
+      <!-- Social icons -->
       <div class="social-links-footer">
         <h3>find us on</h3>
         <ul>
@@ -282,7 +331,7 @@
           </li>
         </ul>
       </div>
-
+      <!-- Footer email form -->
       <div class="form">
         <h3>Subscribe to the newsletter</h3>
         <form class="footer-form">
@@ -299,5 +348,7 @@
         </form>
       </div>
     </footer>
+
+    <script src="./js/mobile-menu.js"></script>
   </body>
 </html>
