--- a/index.html
+++ b/index.html
@@ -18,12 +18,6 @@
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     />
-    <script
-      defer
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-      crossorigin="anonymous"
-    ></script>
   </head>
   <body class="container">
     <!-- header -->
@@ -468,7 +462,7 @@
                 class="col-lg-4 col-md-12 mb-4 mb-md-0 d-inline-flex flex-column"
               >
                 <div class="align-self-center">
-                  <a href="index.html" class="footer-logo"
+                  <a href="index.html" class="footer-logo text-decoration-none"
                     ><span class="logo-web">Web</span>Studio</a
                   >
                 </div>
@@ -653,5 +647,10 @@
         </div>
       </div>
     </div>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
